# model_optimization

./: README.md  文档
model_optimization/Apps/UnitTest/: UnitTest.cpp  UnitTest.sdf  UnitTest.vcxproj  UnitTest.vcxproj.filters  test.ply
model_optimization/Apps/gicp/: ReadMe.txt  main.cpp  optimize.h  transform.cpp
model_optimization/Apps/suVoxel/: CMakeLists.txt
model_optimization/Apps/suVoxel/cmake/: SuCommon.cmake
model_optimization/Apps/suVoxel/include/: UnicodeString.cpp  envolution(冲突_Lenovo-PC_2015-11-19 19-22-00).h  envolution.h  evo_lib.h  suMesh.h  suOctree.h  voxel_output.h
model_optimization/Apps/suVoxel/src/: Main.h  config.h
model_optimization/Apps/suVoxel/src/MeshQuery/: mesh_query.cpp  mesh_query.h
model_optimization/Apps/suVoxel/src/meshVolume/: readme.txt
model_optimization/Apps/suVoxel/src/testUnit/: main.cpp
model_optimization/Apps/suVoxel/src/voxViewer/: GlutExaminer.cpp  GlutExaminer.h  GlutViewer.cpp  GlutViewer.h  MeshViewer.cpp  MeshViewer.h  envolution.cpp  gl.hh  globalSet.cpp  globalSet.h  main.cpp  nodeData.h  suHyperMesh.cpp  suHyperMesh.h  suObjOctree.cpp  suObjOctree.h
model_optimization/Apps/testOpenGL/: CMakeLists.txt  Config.cpp  Main.h  README.txt  config.h  main.cpp
model_optimization/Apps/testOpenGL/lib/: freeglut.lib  freeglut_static.lib
model_optimization/Apps/testOpenGL/octreeViewer/: main.cpp  suOctree.cpp  suOctree.h
model_optimization/include/: Engines.cpp  engine.cpp  engine.h  engines.h  outputvoxel.h
model_optimization/include/Engines/Core/: ClassList.h  ExternalFiles.h  Stdhdr.h  Vector.h
model_optimization/include/Engines/Depth/: cvUtils.h
model_optimization/include/Engines/Graphics Objects/: KDTree2.h  KDTreeN.h
model_optimization/include/Engines/Math/: DenseMatrix.h  Matrix4.h  PCA.cpp  RGBColor.cpp  RGBColor.h  SparseMatrix.h  Vec3f.inl
model_optimization/include/Engines/utility/: Console.cpp  Console.h  commonTools.cpp  debugging.cpp  suCMDParser.h  tstring.h
model_optimization/include/utility/: commonTools.cpp  commonTools.h
model_optimization/lib/: OpenMeshTools.lib  OpenMeshToolsd.lib  freeglut_staticd.lib  freeglutd.lib  opencv_core230d.lib
model_optimization/lib/GitHub/RMECSoft/: CMakeLists.txt
model_optimization/lib/GitHub/RMECSoft/Apps/MeshQuery/: predicates.cxx  predicates.h
model_optimization/lib/GitHub/RMECSoft/Apps/gicp/: CMakeLists.txt  bfgs_funcs.cpp  gicp.cpp  gicp.h
model_optimization/lib/GitHub/RMECSoft/Apps/testUnit/: config.h  main.cpp
model_optimization/lib/GitHub/RMECSoft/Apps/voxlize/: cellData.h  main.cpp  overlap.cpp  overlap.h  slot.h  suHybridMesh.cpp  suHybridMesh.h  suMesh.cpp  suMesh.h  suOctree.cpp  suOctree.h  suOptionHelper.cpp  suOptionHelper.h
model_optimization/lib/GitHub/RMECSoft/include/: Engines.cpp  engines.h
model_optimization/lib/GitHub/RMECSoft/include/Engines/Core/: ExternalFiles.h  Stdhdr.cpp  String.cpp  String.h  StringSTLImpl.cpp  StringSTLImpl.h  UnicodeString.h  Vector.h
model_optimization/lib/GitHub/RMECSoft/include/Engines/Depth/: cvUtils.cpp
model_optimization/lib/GitHub/RMECSoft/include/Engines/Graphics Objects/: KDTree2.cpp  KDTree3.cpp  KDTree3.h  KDTreeN.cpp
model_optimization/lib/GitHub/RMECSoft/include/Engines/Math/: DenseMatrix.cpp  Matrix4.cpp  PCA.h  SpaceVector.cpp  SparseMatrix.cpp  spaceVector.h
model_optimization/lib/GitHub/RMECSoft/include/Engines/utility/: commonTools.h  debugging.h
model_optimization/lib/GitHub/RMECSoft/include/GL/: texImage.cpp  texImage.h
model_optimization/lib/GitHub/RMECSoft/lib/: OpenMeshTools.lib  OpenMeshToolsd.lib  cblas.lib  cblas_d.lib  opencv_ml230d.lib
